@@ -1,0 +1,52 @@
+/*
+ *  Copyright 2006-2010 Jerome PASQUIER
+ * 
+ *  This file is part of RainbruRPG.
+ *
+ *  RainbruRPG is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  RainbruRPG is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with RainbruRPG; if not, write to the Free Software
+ *  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ *  02110-1301  USA
+ *
+ */
+
+#include "FontManagerTest.hpp"
+
+// Registers the fixture to the registry
+CPPUNIT_TEST_SUITE_REGISTRATION( FontManagerTest );
+
+/** Setup the test case
+  *
+  */
+void FontManagerTest::setUp()
+{
+  // No need for m_instance, directly using Singleton
+  setupOgre();
+}
+
+/** Teardown the test case
+  *
+  */
+void FontManagerTest::tearDown()
+{
+  teardownOgre();
+}
+
+/** Test the FontManager::loadFont() function
+  *
+  */
+void FontManagerTest::testLoadFont()
+{
+  RainbruRPG::OgreGui::Font* font = OgreGui::FontManager::getSingleton()
+    .loadFont("Iconiv2.ttf", 10);
+}
