@@ -1,5 +1,5 @@
 # The final program is called "ogregui2-tests"
-bin_PROGRAMS = ogregui2-tests
+bin_PROGRAMS = ogregui2-tests ogregui-fontmanager
 
 ogregui2_tests_LDADD = -L$(top_srcdir)/src/common/.libs			\
 			 -lrainbrurpg-common 				\
@@ -18,6 +18,7 @@ INCLUDES = -I$(top_srcdir)/src/common/ 			\
 	   -I$(top_srcdir)/src/ogreGui/			\
 	   -I$(top_srcdir)/src/maincore/		\
 	   -I$(top_srcdir)/src/tests/helpers/		\
+	   $(FREETYPE_CFLAGS)				\
 	   $(GNET_CFLAGS) 				\
 	   $(OGRE_CFLAGS) 				\
 	   $(OIS_CFLAGS)				\
@@ -28,7 +29,21 @@ ogregui2_tests_SOURCES = main.cpp			\
 			 BrushTest.cpp			\
 			 ContainerTest.cpp		\
 			 FocusableTest.cpp		\
+			 FontManagerTest.cpp		\
 			 DrawableTest.cpp		\
 			 DrawableTestWithOgre.cpp	\
 			 SerializableTest.cpp		\
 			 WidgetListTest.cpp
+
+ogregui_fontmanager_SOURCES = main-fontmanager.cpp		\
+	                      FontManagerTest.cpp
+
+ogregui_fontmanager_LDADD = $(RPG_LIB_ADD)				\
+			    -L$(top_srcdir)/src/common/.libs		\
+			    -lrainbrurpg-common 			\
+			    -L$(top_srcdir)/src/ogreGui/.libs		\
+			    -lrainbrurpg-ogregui			\
+			    -L$(top_srcdir)/src/maincore/.libs		\
+			    -lrainbrurpg-core				\
+			    $(CPPUNIT_LIBS)				\
+			    $(top_srcdir)/src/tests/helpers/libtesthelpers.la
